[tool.poetry]
name = "asaswap"
version = "0.1.0"
description = ""
authors = ["krystiansiwek <krystian.siwek@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.7"
py-algorand-sdk = "^1.4.1"
pyteal = "^0.6.1"
pytest = "^6.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
