[tool.poetry]
name = "asaswap"
version = "0.1.0"
description = ""
authors = ["krystiansiwek <krystian.siwek@yahoo.com>", "sebastiangula <sebastian.gula@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyteal = "^0.6.1"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
