[tool.poetry]
name = "asaswap"
version = "0.1.0"
description = ""
authors = ["krystiansiwek <krystian.siwek@yahoo.com>", "sebastiangula <sebastian.gula@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyteal = {git = "https://github.com/algorand/pyteal.git", rev = "120202cf73b43612426a054d5b731320d13bfdf1"}
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
