[tool.poetry]
name = "asaswap"
version = "0.1.0"
description = ""
authors = ["krystiansiwek <krystian.siwek@yahoo.com>", "sebastiangula <sebastian.gula@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyteal = "^0.7.0"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
hypothesis = "^6.13.10"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
